# pycensuskr

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: build-and-release.yml
pycensuskr/: __init__.py  core.py  pycensuskr.py
pycensuskr/data/: censuskor.csv  censuskor.parquet
tests/: __init__.py  test_core.py  test_pycensuskr.py
