[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycensuskr"
version = "0.1.2"
description = "A Python package for Korean census data processing"
readme = "README.md"
authors = [
    {name = "Insang Song", email = "geoissong@gmail.com"},
    {name = "Sohyun Park", email = "wherewindstay@gmail.com"},
    {name = "Sohyun Park", email = "hyesop.shin@auckland.ac.nz"}
]
maintainers = [
    {name = "Insang Song", email = "geoissong@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/sigmafelix/pycensuskr"
Repository = "https://github.com/sigmafelix/pycensuskr"
"Bug Tracker" = "https://github.com/sigmafelix/pycensuskr/issues"

[tool.setuptools]
packages = ["pycensuskr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.setuptools.package-data]
"*" = ["*.csv"]